# splinterIRC

./: CMakeLists.txt  README.md  splinter.cpp  test_parser.cpp
src/libsplinterIRC/actions/: IRCActionEnvelope.cpp  IRCActionEnvelope.h  actions.cpp
src/libsplinterIRC/client/: client.cpp  client.h
src/libsplinterIRC/client/command_processing/: command_processing.cpp
src/libsplinterIRC/client/handlers/: handlers.cpp
src/libsplinterIRC/command_processing/: command_processing.cpp  help_prompts.cpp
src/libsplinterIRC/events/: IRCEvent.cpp  IRCEvent.h  IRCEventEnvelope.cpp  IRCEventEnvelope.h  IRCEventv3.cpp  IRCEventv3.h  helpers.cpp  mappers.cpp  mappings.cpp  postprocessors.cpp
src/libsplinterIRC/handlers/: handlers.cpp  mappings.cpp
src/libsplinterIRC/helpers/: helpers.cpp  helpers.h
src/libsplinterIRC/irc_event/: irc_event.cpp  irc_event.h
src/libsplinterIRC/threads/: client_threads.cpp
